fixed image size on mobile ( still buggy but better)

--- a/frontend/src/pages/BookInfo.scss
+++ b/frontend/src/pages/BookInfo.scss
@@ -24,6 +24,8 @@
     }
     &__image {
       width: 50%;
+      max-height: 100vh;
+      overflow: hidden;
       & > img {
         height: 100%;
         width: 100%;
